envoy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000
stats_sinks:
  - name: envoy.statsd
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig
      prefix: envoy.statsd.metrics
      report_counters_as_deltas: true
      report_histograms_as_deltas: true
      use_tag_extracted_name: true
      grpc_service: 
        envoy_grpc:
          cluster_name: statsd-otel-collector
stats_flush_interval: 3s
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: envoy_stats
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: httpbin_cluster
    - name: lst-metrics
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 19010
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: envoy_metrics
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/stats/prometheus"
                    route:
                      cluster: envoy_metrics
                  - match:
                      prefix: "/metrics"
                    route:
                      cluster: envoy_metrics
                      regex_rewrite:
                        pattern:
                          regex: metrics
                        substitution: stats/prometheus?text_readouts
                  response_headers_to_remove:
                  - Server
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              server_header_transformation: PASS_THROUGH
  clusters:
    - name: envoy_metrics
      type: STATIC
      connect_timeout: 1s
      load_assignment:
        cluster_name: envoy_metrics
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 19000
    ### Application Cluster
    - name: httpbin_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: ${SERVICE_NAME}
                  port_value: ${SERVICE_PORT}
    - name: statsd-otel-collector
      connect_timeout: 1s
      type: strict_dns
      http2_protocol_options: {}   # Required for gRPC
      load_assignment:
        cluster_name: statsd-otel-collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address:  ${LOG_PROCESSOR_IP}  # Replace with your actual OTEL endpoint
                      port_value: 9125
